force-app/main/default/objects/IntegrationSetting__c/IntegrationSetting__c.object-meta.xml
<CustomObject>
    <label>Integration Setting</label>
    <nameField>
        <label>IntegrationSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>