force-app/main/default/objects/IntegrationSetting__c/fields/AccessTokenTime__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenTime__c</fullName>
    <label>Access Token Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>