force-app/main/default/objects/IntegrationSetting__c/fields/EndpointAccessToken__c.field-meta.xml
<CustomField>
    <fullName>EndpointAccessToken__c</fullName>
    <label>Endpoint Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>