force-app/main/default/objects/IntegrationSetting__c/fields/LastAccessTokenTime__c.field-meta.xml
<CustomField>
    <fullName>LastAccessTokenTime__c</fullName>
    <label>Last Access Token Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>